Change log for Socialtext Open

2.20.X

Release notes, 2.20.6.5  June 2008

  Searches include "Snippets" from KinoSearch.

  Fix performance hotspot for workspaces with many tags

  Bug: extra comment box pop-up

  Bug: problem with orphaned pages listing (may not have been seen in the wild)

  Bug: firefox 3 file uploads

Release notes, 2.20.5.x  June 2008

  Remove dependency on Alzabo (making this the "Alzab-no" release)
  
  Re-add common and s2 skins

  Make OSR buildable again

  Improved migration architecture (Alzab-no and more)

  Improved LDAP compatibility

  Italian Help documentation

Release notes, 2.20.4.x  May 2008

  Bug: migration issue when upgrading from 2.11 (Bug 663)

  Improved ReST API - delete users and workspaces, configure user-workspace permissions

  Improved LDAP configuration

Release notes, 2.20.3.3  May 2008

  Add support for pluggable web parts

Release notes, 2.20.3.2  May 2008

  Bug: Deep recursion for specifically formatted wikitext

  Updated Help docs

Release notes, 2.20.3.1  May 2008

  Allow configuration of workspace custom Javascript URI via REST
  
  Add Italian translation of the UI

  Improved usability of the edit menu

  Bug: Table editing in IE

  Bug: IE Freezes on Save/Cancel and browser resize

  Bug: Inserting an uploaded email

  Bug: Link dialog would not appear when editing a wiki link in IE 7

  Additional and standardized application logging

  Updated help docs

  Bug: remove deleted attachments in search results

  IE 7: Stack overflow
  
  Improved usability of the insert menu

Release notes, 2.20.1.2  April 2008

  Fixed inconsistent Database schemas

  Updated migrations that were causing problems

Release notes, 2.20.1.0  March 2008

  Fixed sidebar positioning with CSS

  Display images in edit modes and support resizing

  Infrastructure improvements for supporting javascript plugins

  More database refactoring - removing Alz-abo framework
