@@ -1,0 +1,24 @@
+#!/usr/bin/perl
+use strict;
+use warnings;
+use Socialtext::Schema;
+use Socialtext::SQL qw/sql_execute/;
+
+my $storage_exists = table_exists('storage');
+my $event_exists = table_exists('event');
+
+my $schema = Socialtext::Schema->new;
+if ( $schema->current_version == 2 and $storage_exists and $event_exists ) {
+    # These tables already exist, so we want to run the Migration 
+    # so that we skip the database schema migration socialtext-2-to-3.sql
+    exit 0;
+}
+exit 1;
+
+
+sub table_exists {
+    my $name = shift;
+    my $sth = sql_execute("select 1 FROM pg_tables WHERE tablename = ?", $name);
+    my $rows = $sth->fetchall_arrayref;
+    return @$rows;
+}
